fixed vimeo video scaling on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -292,8 +292,12 @@ span {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 66%;
-  height: 66%;
+  width: 100%;
+  height: 100%;
+}
+
+.vimeoVideo {
+  min-height: 200px;
 }
 
 #about {
@@ -417,6 +421,11 @@ body {
   float: left;
   box-sizing: border-box;
 }
+#work {
+  /* margin-left: -48px; */
+  padding: 24px;
+}
+
 
 /* Use flex to reorder elements in containers when small */
 .flexRow {
@@ -447,6 +456,16 @@ body {
   #work {
     /* margin-left: -48px; */
     padding: 48px;
+  }
+  .vimeoVideo {
+    min-height: 500px;
+  }
+
+  .embed-container iframe,
+  .embed-container object,
+  .embed-container embed {
+    width: 70%;
+    height: 70%;
   }
 }
 
